@@ -44,6 +44,11 @@ Release date: TBA
 
   Closes #4020
 
+* Fix false positive for ``unsubscriptable-object`` in Python 3.8 and below for
+  statements guarded by ``if TYPE_CHECKING``.
+
+  Closes #3979
+
 
 What's New in Pylint 2.13.7?
 ============================
